[package]
name = "bevy_remote_asset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bevy = { version = "0.11", default-features = false, features = ["bevy_asset"] }
async-compat = "0.2.1"
futures-lite = "1.12.0"
reqwest = { version = "0.11.16", default-features = false }

[dev-dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_sprite",
    "png",
    "x11", # GitHub Actions runners don't have libxkbcommon installed, so can't use Wayland
] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
crossbeam-channel = "0.5.8"