[package]
name = "bevy_remote_asset"
version = "0.1.0"
edition = "2021"
description = "A Bevy plugin to load asset from web"
readme = "README.md"
repository = "https://github.com/foxzool/bevy_http_client"
authors = ["FoxZoOL <zhooul@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["bevy", "wasm", "plugin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bevy = { version = "0.11", default-features = false, features = ["bevy_asset"] }
ehttp = { version = "0.3.0", features = ["native-async"] }
futures-lite = "1.12.0"


[dev-dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_sprite",
    "png",
    "x11", # GitHub Actions runners don't have libxkbcommon installed, so can't use Wayland
] }

